Bug 53993 - EDITING: Only one edit for Custom animation (freeform) path
Summary: EDITING: Only one edit for Custom animation (freeform) path
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.4 RC1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:6.2.0
Keywords:
: 42994 70677 73091 96630 114136 (view as bug list)
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2012-08-24 08:16 UTC by Gregor
Modified: 2018-07-11 22:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
ODP with a Title slide and a slide with a freeform custom animation motion path that has been edited several times but edits beyond the first do not influence the path (12.16 KB, application/vnd.oasis.opendocument.presentation)
2012-08-24 08:16 UTC, Gregor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor 2012-08-24 08:16:32 UTC
Created attachment 66051 [details]
ODP with a Title slide and a slide with a freeform custom animation motion path that has been edited several times but edits beyond the first do not influence the path

Problem description: When editing a custom animation freeform path, the first edit offers a save and it works but second and consecutive edits offer no save and the edits are not applied.

Steps to reproduce:
1. Insert a shape, select it
2. Apply a custom animation > motion path > Freeform
3. Draw the path, choose Slow for the speed
4. Test the path with <Play>
5. Save
6. Select the shape double click the path to edit the control points, drag a control point.
7. Test the path to see that it has indeed changed
8. Save  (if you can!)
9. Edit the path again: No save available
10. Test the path with <Play> No change to the path



Current behavior:

Expected behavior:

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.1 (KHTML, like Gecko) Chrome/21.0.1180.83 Safari/537.1
Comment 1 Regina Henschel 2012-08-24 19:31:37 UTC
Confirmed with LO 3.6. It is inherit from OOo. OOo2.4.3 works, OOo3.1.1 fails totally because path is not selectable at all, OOo3.2 already has the bug, that changing a point does not change the model but only the view.
Comment 2 Gregor 2012-08-25 08:12:37 UTC
A rather cumbersome workaround that sometimes (always?) works is, after subsequent edits, to move the entire path (grab the path when the mouse pointer is a 4 way arrow and drag to another place, test the path, drag it back, test, Save As...
Comment 3 QA Administrators 2015-01-05 17:51:53 UTC Comment hidden (obsolete)
Comment 4 Regina Henschel 2015-01-06 00:21:21 UTC
The error is still there in Version: 4.5.0.0.alpha0+
Build ID: 5b829710d65310c6082c2c65ec1239515e319a8e
TinderBox: Win-x86@39, Branch:master, Time: 2014-12-02_06:39:26
Locale: de_DE

The workaround from comment 2 keeps working.
Comment 5 Yingtong Li 2015-02-16 06:26:52 UTC
Bug is still present on LibreOffice 4.4.0.3, build 4.4.0.3 Arch Linux build-2. The workaround from comment 2 works every time.
Comment 6 Buovjaga 2015-11-30 12:37:27 UTC
*** Bug 42994 has been marked as a duplicate of this bug. ***
Comment 7 Buovjaga 2015-11-30 13:39:32 UTC
*** Bug 70677 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2015-11-30 13:39:56 UTC
*** Bug 73091 has been marked as a duplicate of this bug. ***
Comment 9 QA Administrators 2017-01-03 19:34:43 UTC Comment hidden (obsolete)
Comment 10 Regina Henschel 2017-02-11 15:01:16 UTC
It is likely connected to bug 33022.
Comment 11 Regina Henschel 2017-02-11 15:41:44 UTC
*** Bug 96630 has been marked as a duplicate of this bug. ***
Comment 12 gmolleda 2017-11-30 15:56:12 UTC
*** Bug 114136 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2018-06-28 14:44:17 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ab9ab9d381fe871a56f346a6223a7f572c2a4d90

tdf#53993 broadcast the change when dragging ends.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.