tdf#53993 broadcast the change when dragging ends.

Eventually MotionPathTag::Notify() and CustomAnimationPane::
updatePathFromMotionPathTag will be called to update the
motion path of the effect.

Change-Id: I1cd0756ea24d9b56ad3c44c99ef015c584c74dc7